--- a/premieretest.ipynb
+++ b/premieretest.ipynb
@@ -2,25 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +106,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -133,9 +127,9 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\,'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\,'\n",
-      "C:\\Users\\Abdoulaye_Faye\\AppData\\Local\\Temp\\ipykernel_7816\\1758998141.py:1: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "C:\\Users\\Abdoulaye_Faye\\AppData\\Local\\Temp\\ipykernel_1248\\1758998141.py:1: SyntaxWarning: invalid escape sequence '\\,'\n",
       "  dataset = pd.read_csv(\"TitanicDataset.csv\",sep='\\,')\n",
-      "C:\\Users\\Abdoulaye_Faye\\AppData\\Local\\Temp\\ipykernel_7816\\1758998141.py:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "C:\\Users\\Abdoulaye_Faye\\AppData\\Local\\Temp\\ipykernel_1248\\1758998141.py:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  dataset = pd.read_csv(\"TitanicDataset.csv\",sep='\\,')\n"
      ]
     }
@@ -146,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +281,7 @@
        "\"5            373450   8.0500   NaN       S\"  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +313,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +335,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,8 +345,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pretraitemant de la base de données"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selection des colonnes pertinants pour notre problematique"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +386,6 @@
        "      <th></th>\n",
        "      <th>Survived</th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "    </tr>\n",
@@ -388,7 +395,6 @@
        "      <th>\"1</th>\n",
        "      <td>3</td>\n",
        "      <td>\"\"Braund</td>\n",
-       "      <td>Mr. Owen Harris\"\"</td>\n",
        "      <td>male</td>\n",
        "      <td>22.0</td>\n",
        "    </tr>\n",
@@ -396,7 +402,6 @@
        "      <th>\"2</th>\n",
        "      <td>1</td>\n",
        "      <td>\"\"Cumings</td>\n",
-       "      <td>Mrs. John Bradley (Florence Briggs Thayer)\"\"</td>\n",
        "      <td>female</td>\n",
        "      <td>38.0</td>\n",
        "    </tr>\n",
@@ -404,7 +409,6 @@
        "      <th>\"3</th>\n",
        "      <td>3</td>\n",
        "      <td>\"\"Heikkinen</td>\n",
-       "      <td>Miss. Laina\"\"</td>\n",
        "      <td>female</td>\n",
        "      <td>26.0</td>\n",
        "    </tr>\n",
@@ -412,7 +416,6 @@
        "      <th>\"4</th>\n",
        "      <td>1</td>\n",
        "      <td>\"\"Futrelle</td>\n",
-       "      <td>Mrs. Jacques Heath (Lily May Peel)\"\"</td>\n",
        "      <td>female</td>\n",
        "      <td>35.0</td>\n",
        "    </tr>\n",
@@ -420,7 +423,6 @@
        "      <th>\"5</th>\n",
        "      <td>3</td>\n",
        "      <td>\"\"Allen</td>\n",
-       "      <td>Mr. William Henry\"\"</td>\n",
        "      <td>male</td>\n",
        "      <td>35.0</td>\n",
        "    </tr>\n",
@@ -429,37 +431,295 @@
        "</div>"
       ],
       "text/plain": [
-       "    Survived       Pclass                                           Name  \\\n",
-       "\"1         3     \"\"Braund                              Mr. Owen Harris\"\"   \n",
-       "\"2         1    \"\"Cumings   Mrs. John Bradley (Florence Briggs Thayer)\"\"   \n",
-       "\"3         3  \"\"Heikkinen                                  Miss. Laina\"\"   \n",
-       "\"4         1   \"\"Futrelle           Mrs. Jacques Heath (Lily May Peel)\"\"   \n",
-       "\"5         3      \"\"Allen                            Mr. William Henry\"\"   \n",
-       "\n",
-       "       Sex   Age  \n",
-       "\"1    male  22.0  \n",
-       "\"2  female  38.0  \n",
-       "\"3  female  26.0  \n",
-       "\"4  female  35.0  \n",
-       "\"5    male  35.0  "
+       "    Survived       Pclass     Sex   Age\n",
+       "\"1         3     \"\"Braund    male  22.0\n",
+       "\"2         1    \"\"Cumings  female  38.0\n",
+       "\"3         3  \"\"Heikkinen  female  26.0\n",
+       "\"4         1   \"\"Futrelle  female  35.0\n",
+       "\"5         3      \"\"Allen    male  35.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset=dataset[['Survived', 'Pclass', 'Name', 'Sex', 'Age']]\n",
+    "dataset=dataset[['Survived', 'Pclass', 'Sex', 'Age']]\n",
     "dataset.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dimension du dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(891, 4)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nombre de valeurs NAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Survived      0\n",
+       "Pclass        0\n",
+       "Sex           0\n",
+       "Age         177\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nombre de valeurs manquentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Survived      0\n",
+       "Pclass        0\n",
+       "Sex           0\n",
+       "Age         177\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Netoyage de la base de données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datasetN  = dataset.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Division de la base de données en deux base train et test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>\"1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>\"\"Braund</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>\"2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>\"\"Cumings</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>\"3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>\"\"Heikkinen</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>\"4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>\"\"Futrelle</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>\"5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>\"\"Allen</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>\"886</th>\n",
+       "      <td>3</td>\n",
+       "      <td>\"\"Rice</td>\n",
+       "      <td>female</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>\"887</th>\n",
+       "      <td>2</td>\n",
+       "      <td>\"\"Montvila</td>\n",
+       "      <td>male</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>\"888</th>\n",
+       "      <td>1</td>\n",
+       "      <td>\"\"Graham</td>\n",
+       "      <td>female</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>\"890</th>\n",
+       "      <td>1</td>\n",
+       "      <td>\"\"Behr</td>\n",
+       "      <td>male</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>\"891</th>\n",
+       "      <td>3</td>\n",
+       "      <td>\"\"Dooley</td>\n",
+       "      <td>male</td>\n",
+       "      <td>32.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>714 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Survived       Pclass     Sex   Age\n",
+       "\"1           3     \"\"Braund    male  22.0\n",
+       "\"2           1    \"\"Cumings  female  38.0\n",
+       "\"3           3  \"\"Heikkinen  female  26.0\n",
+       "\"4           1   \"\"Futrelle  female  35.0\n",
+       "\"5           3      \"\"Allen    male  35.0\n",
+       "...        ...          ...     ...   ...\n",
+       "\"886         3       \"\"Rice  female  39.0\n",
+       "\"887         2   \"\"Montvila    male  27.0\n",
+       "\"888         1     \"\"Graham  female  19.0\n",
+       "\"890         1       \"\"Behr    male  26.0\n",
+       "\"891         3     \"\"Dooley    male  32.0\n",
+       "\n",
+       "[714 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasetN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword argument repeated: drop_first (215208771.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[59], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    df_encoded = pd.get_dummies(datasetN['Sex', 'Pclass'], dummy_na=False,drop_first=True,drop_first=True)\u001b[0m\n\u001b[1;37m                                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m keyword argument repeated: drop_first\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_encoded = pd.get_dummies(datasetN['Sex', 'Pclass'], dummy_na=False,drop_first=True,drop_first=True)\n",
+    "df_encoded"
+   ]
   }
  ],
  "metadata": {
