--- a/premieretest.ipynb
+++ b/premieretest.ipynb
@@ -704,21 +704,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "keyword argument repeated: drop_first (215208771.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[59], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    df_encoded = pd.get_dummies(datasetN['Sex', 'Pclass'], dummy_na=False,drop_first=True,drop_first=True)\u001b[0m\n\u001b[1;37m                                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m keyword argument repeated: drop_first\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array(['\"\"Braund', '\"\"Cumings', '\"\"Heikkinen', '\"\"Futrelle', '\"\"Allen',\n",
+       "       '\"\"McCarthy', '\"\"Palsson', '\"\"Johnson', '\"\"Nasser', '\"\"Sandstrom',\n",
+       "       '\"\"Bonnell', '\"\"Saundercock', '\"\"Andersson', '\"\"Vestrom',\n",
+       "       '\"\"Hewlett', '\"\"Rice', '\"\"Vander Planke', '\"\"Fynney', '\"\"Beesley',\n",
+       "       '\"\"McGowan', '\"\"Sloper', '\"\"Asplund', '\"\"Fortune', '\"\"Uruchurtu',\n",
+       "       '\"\"Wheadon', '\"\"Meyer', '\"\"Holverson', '\"\"Cann', '\"\"Nicola-Yarred',\n",
+       "       '\"\"Ahlin', '\"\"Turpin', '\"\"Laroche', '\"\"Devaney',\n",
+       "       '\"\"Arnold-Franchi', '\"\"Panula', '\"\"Nosworthy', '\"\"Harper',\n",
+       "       '\"\"Faunthorpe', '\"\"Ostby', '\"\"Rugg', '\"\"Novel', '\"\"West',\n",
+       "       '\"\"Goodwin', '\"\"Sirayanian', '\"\"Icard', '\"\"Harris', '\"\"Skoog',\n",
+       "       '\"\"Nye', '\"\"Crease', '\"\"Kink', '\"\"Jenkin', '\"\"Hood',\n",
+       "       '\"\"Chronopoulos', '\"\"Bing', '\"\"Moen', '\"\"Caldwell', '\"\"Dowdell',\n",
+       "       '\"\"Waelens', '\"\"Sheerlinck', '\"\"Carrau', '\"\"Ilett', '\"\"Backstrom',\n",
+       "       '\"\"Ford', '\"\"Celotti', '\"\"Christmann', '\"\"Andreasson', '\"\"Chaffee',\n",
+       "       '\"\"Dean', '\"\"Coxon', '\"\"Goldschmidt', '\"\"Greenfield', '\"\"Doling',\n",
+       "       '\"\"Kantor', '\"\"Petranec', '\"\"White', '\"\"Johansson', '\"\"Gustafsson',\n",
+       "       '\"\"Mionoff', '\"\"Salkjelsvik', '\"\"Rekic', '\"\"Porter', '\"\"Zabour',\n",
+       "       '\"\"Barton', '\"\"Jussila', '\"\"Attalah', '\"\"Pekoniemi', '\"\"Connors',\n",
+       "       '\"\"Baxter', '\"\"Hickman', '\"\"Webber', '\"\"Madsen', '\"\"Ekstrom',\n",
+       "       '\"\"Drazenoic', '\"\"Coelho', '\"\"Robins', '\"\"Weisz', '\"\"Sobey',\n",
+       "       '\"\"Richard', '\"\"Newsom', '\"\"Osen', '\"\"Giglio', '\"\"Nysten',\n",
+       "       '\"\"Hakkarainen', '\"\"Burke', '\"\"Andrew', '\"\"Nicholls', '\"\"Navratil',\n",
+       "       '\"\"Byles', '\"\"Bateman', '\"\"Pears', '\"\"Meo', '\"\"van Billiard',\n",
+       "       '\"\"Williams', '\"\"Gilnagh', '\"\"Corn', '\"\"Cribb', '\"\"Watt',\n",
+       "       '\"\"Bengtsson', '\"\"Calic', '\"\"Goldsmith', '\"\"Ling',\n",
+       "       '\"\"Van der hoef', '\"\"Sivola', '\"\"Smith', '\"\"Klasen', '\"\"Isham',\n",
+       "       '\"\"Hale', '\"\"Leonard', '\"\"Becker', '\"\"Kink-Heilmann', '\"\"Romaine',\n",
+       "       '\"\"Bourke', '\"\"Turcin', '\"\"Pinsky', '\"\"Carbines',\n",
+       "       '\"\"Andersen-Jensen', '\"\"Brown', '\"\"Lurette', '\"\"Olsen', '\"\"Yrois',\n",
+       "       '\"\"Vande Walle', '\"\"Johanson', '\"\"Youseff', '\"\"Cohen', '\"\"Strom',\n",
+       "       '\"\"Albimona', '\"\"Carr', '\"\"Blank', '\"\"Ali', '\"\"Cameron',\n",
+       "       '\"\"Perkin', '\"\"Givard', '\"\"Newell', '\"\"Honkanen', '\"\"Jacobsohn',\n",
+       "       '\"\"Bazzani', '\"\"Sunderland', '\"\"Bracken', '\"\"Green', '\"\"Hoyt',\n",
+       "       '\"\"Berglund', '\"\"Mellors', '\"\"Lovell', '\"\"Fahlstrom', '\"\"Larsson',\n",
+       "       '\"\"Sjostedt', '\"\"Leyson', '\"\"Hold', '\"\"Collyer', '\"\"Pengelly',\n",
+       "       '\"\"Hunt', '\"\"Coleridge', '\"\"Maenpaa', '\"\"Minahan', '\"\"Lindahl',\n",
+       "       '\"\"Hamalainen', '\"\"Beckwith', '\"\"Carter', '\"\"Stead', '\"\"Lobb',\n",
+       "       '\"\"Rosblom', '\"\"Touma', '\"\"Cherry', '\"\"Ward', '\"\"Parrish',\n",
+       "       '\"\"Taussig', '\"\"Harrison', '\"\"Reeves', '\"\"Persson', '\"\"Graham',\n",
+       "       '\"\"Bissette', '\"\"Tornquist', '\"\"Mellinger', '\"\"Natsch',\n",
+       "       '\"\"Andrews', '\"\"Lindblom', '\"\"Abbott', '\"\"Duane', '\"\"Olsson',\n",
+       "       '\"\"de Pelsmaeker', '\"\"Dorking', '\"\"Stankovic', '\"\"de Mulder',\n",
+       "       '\"\"Naidenoff', '\"\"Hosono', '\"\"Connolly', '\"\"Barber', '\"\"Bishop',\n",
+       "       '\"\"Levy', '\"\"Haas', '\"\"Mineff', '\"\"Hanna', '\"\"Allison',\n",
+       "       '\"\"Penasco y Castellana', '\"\"Abelson', '\"\"Francatelli', '\"\"Hays',\n",
+       "       '\"\"Ryerson', '\"\"Lahtinen', '\"\"Hendekovic', '\"\"Hart', '\"\"Nilsson',\n",
+       "       '\"\"Moraweck', '\"\"Wick', '\"\"Spedden', '\"\"Dennis', '\"\"Danoff',\n",
+       "       '\"\"Slayter', '\"\"Young', '\"\"Nysveen', '\"\"Ball', '\"\"Hippach',\n",
+       "       '\"\"Partner', '\"\"Burns', '\"\"Dahl', '\"\"Blackwell', '\"\"Collander',\n",
+       "       '\"\"Sedgwick', '\"\"Fox', '\"\"Coutts', '\"\"Dimic', '\"\"Odahl', '\"\"Elias',\n",
+       "       '\"\"Vanden Steen', '\"\"Bowerman', '\"\"Funk', '\"\"del Carlo',\n",
+       "       '\"\"Barbara', '\"\"Asim', '\"\"Adahl', '\"\"Warren', '\"\"Aubart',\n",
+       "       '\"\"Harder', '\"\"Wiklund', '\"\"Beavan', '\"\"Ringhini', '\"\"Landergren',\n",
+       "       '\"\"Widener', '\"\"Betros', '\"\"Bidois', '\"\"Nakid', '\"\"Tikkanen',\n",
+       "       '\"\"Davies', '\"\"Buss', '\"\"Lehmann', '\"\"Jansson', '\"\"McKane',\n",
+       "       '\"\"Pain', '\"\"Trout', '\"\"Niskanen', '\"\"Adams', '\"\"Oreskovic',\n",
+       "       '\"\"Gale', '\"\"Widegren', '\"\"Richards', '\"\"Birkeland', '\"\"Sundman',\n",
+       "       '\"\"Drew', '\"\"Silven', '\"\"Matthews', '\"\"Van Impe', '\"\"Charters',\n",
+       "       '\"\"Zimmerman', '\"\"Danbom', '\"\"Clarke', '\"\"Phillips', '\"\"Pickard',\n",
+       "       '\"\"Bjornstrom-Steffansson', '\"\"Louch', '\"\"Kallio', '\"\"Silvey',\n",
+       "       '\"\"Kvillner', '\"\"Hampe', '\"\"Petterson', '\"\"Reynaldo', '\"\"Dodge',\n",
+       "       '\"\"Seward', '\"\"Baclini', '\"\"Peuchen', '\"\"Foreman', '\"\"Goldenberg',\n",
+       "       '\"\"Jalsevac', '\"\"Millet', '\"\"Toomey', '\"\"Anderson', '\"\"Morley',\n",
+       "       '\"\"Gee', '\"\"Milling', '\"\"Goncalves', '\"\"Smart', '\"\"Cacic',\n",
+       "       '\"\"Jerwan', '\"\"Strandberg', '\"\"Renouf', '\"\"Karlsson', '\"\"Hirvonen',\n",
+       "       '\"\"Rouse', '\"\"Turkula', '\"\"Kent', '\"\"Somerton', '\"\"Windelov',\n",
+       "       '\"\"Molson', '\"\"Artagaveytia', '\"\"Stanley', '\"\"Eustis',\n",
+       "       '\"\"Svensson', '\"\"Canavan', '\"\"Laitinen', '\"\"Maioni', '\"\"Quick',\n",
+       "       '\"\"Lang', '\"\"Daly', '\"\"McGough', '\"\"Rothschild', '\"\"Coleff',\n",
+       "       '\"\"Walker', '\"\"Lemore', '\"\"Angle', '\"\"Pavlovic', '\"\"Perreault',\n",
+       "       '\"\"Vovk', '\"\"Farrell', '\"\"Ridsdale', '\"\"Salonen', '\"\"Hocking',\n",
+       "       '\"\"Butt', '\"\"LeRoy', '\"\"Frolicher', '\"\"Crosby', '\"\"Beane',\n",
+       "       '\"\"Douglas', '\"\"Nicholson', '\"\"Thayer', '\"\"Sharp', '\"\"Leeni',\n",
+       "       '\"\"Ohman', '\"\"Wright', '\"\"Duff Gordon', '\"\"de Messemaeker',\n",
+       "       '\"\"Sivic', '\"\"Norman', '\"\"Stoytcheff', '\"\"Jonsson', '\"\"Appleton',\n",
+       "       '\"\"Flynn', '\"\"Rush', '\"\"Patchett', '\"\"Garside', '\"\"Christy',\n",
+       "       '\"\"Downton', '\"\"Ross', '\"\"Jarvis', '\"\"Frolicher-Stehli',\n",
+       "       '\"\"Gilinski', '\"\"Rintamaki', '\"\"Stephenson', '\"\"Elsbury',\n",
+       "       '\"\"Chapman', '\"\"Torber', '\"\"Homer', '\"\"Lindell', '\"\"Karaic',\n",
+       "       '\"\"Daniel', '\"\"Shutes', '\"\"Brocklebank', '\"\"Herman', '\"\"Gavey',\n",
+       "       '\"\"Yasbeck', '\"\"Kimball', '\"\"Hansen', '\"\"Bowen', '\"\"Sutton',\n",
+       "       '\"\"Kirkland', '\"\"Longley', '\"\"Bostandyeff', '\"\"Barkworth',\n",
+       "       '\"\"Lundahl', '\"\"Stahelin-Maeglin', '\"\"Davis', '\"\"Leinonen',\n",
+       "       '\"\"Jensen', '\"\"Sagesser', '\"\"Cor', '\"\"Simonius-Blumer', '\"\"Kalvik',\n",
+       "       '\"\"Hegarty', '\"\"Eitemiller', '\"\"Frauenthal', '\"\"Badt', '\"\"Colley',\n",
+       "       '\"\"Lindqvist', '\"\"Butler', '\"\"Cook', '\"\"Davidson', '\"\"Mitchell',\n",
+       "       '\"\"Wilhelms', '\"\"Edvardsson', '\"\"Sawyer', '\"\"Turja', '\"\"Cardeza',\n",
+       "       '\"\"Hassab', '\"\"Olsvigen', '\"\"Dakic', '\"\"Fischer', '\"\"Madill',\n",
+       "       '\"\"Dick', '\"\"Karun', '\"\"Saad', '\"\"Weir', '\"\"Kelly', '\"\"Humblen',\n",
+       "       '\"\"Astor', '\"\"Silverthorne', '\"\"Gallagher', '\"\"Calderhead',\n",
+       "       '\"\"Cleaver', '\"\"Mayne', '\"\"Taylor', '\"\"Greenberg', '\"\"Soholt',\n",
+       "       '\"\"Endres', '\"\"Troutt', '\"\"Gillespie', '\"\"Hodges', '\"\"Chambers',\n",
+       "       '\"\"Bryhl', '\"\"Ilmakangas', '\"\"Hassan', '\"\"Berriman',\n",
+       "       '\"\"Troupiansky', '\"\"Lesurer', '\"\"Cavendish', '\"\"McNamee',\n",
+       "       '\"\"Stranden', '\"\"Sinkkonen', '\"\"Marvin', '\"\"Connaghton', '\"\"Wells',\n",
+       "       '\"\"Moor', '\"\"Vande Velde', '\"\"Jonkoff', '\"\"Carlsson', '\"\"Bailey',\n",
+       "       '\"\"Theobald', '\"\"Rothes', '\"\"Nirva', '\"\"Barah', '\"\"Eklund',\n",
+       "       '\"\"Hogeboom', '\"\"Mangan', '\"\"Gronnestad', '\"\"Lievens', '\"\"Mack',\n",
+       "       '\"\"Myhrman', '\"\"Emanuel', '\"\"Robert', '\"\"Ayoub', '\"\"Long',\n",
+       "       '\"\"Harmer', '\"\"Sjoblom', '\"\"Guggenheim', '\"\"Gaskell',\n",
+       "       '\"\"Dantcheff', '\"\"Otter', '\"\"Leader', '\"\"Osman',\n",
+       "       '\"\"Ibrahim Shawah', '\"\"Ponesell', '\"\"Thomas', '\"\"Hedman',\n",
+       "       '\"\"Pettersson', '\"\"Alexander', '\"\"Lester', '\"\"Slemen', '\"\"Tomlin',\n",
+       "       '\"\"Heininen', '\"\"Mallet', '\"\"Holm', '\"\"Lulic', '\"\"Reuchlin',\n",
+       "       '\"\"Stone', '\"\"Augustsson', '\"\"Allum', '\"\"Compton', '\"\"Pasic',\n",
+       "       '\"\"Chip', '\"\"Alhomaki', '\"\"Mudd', '\"\"Serepeca', '\"\"Lemberopolous',\n",
+       "       '\"\"Culumovic', '\"\"Abbing', '\"\"Markoff', '\"\"Boulos', '\"\"Lines',\n",
+       "       '\"\"Aks', '\"\"Giles', '\"\"Swift', '\"\"Gill', '\"\"Bystrom',\n",
+       "       '\"\"Duran y More', '\"\"Roebling', '\"\"Balkic', '\"\"Vander Cruyssen',\n",
+       "       '\"\"Najib', '\"\"Petroff', '\"\"Potter', '\"\"Shelley', '\"\"Markun',\n",
+       "       '\"\"Dahlberg', '\"\"Banfield', '\"\"Sutehall', '\"\"Montvila', '\"\"Behr',\n",
+       "       '\"\"Dooley'], dtype=object)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_encoded = pd.get_dummies(datasetN['Sex', 'Pclass'], dummy_na=False,drop_first=True,drop_first=True)\n",
-    "df_encoded"
+    "datasetN['Pclass'].unique()"
    ]
   }
  ],
